# pyfastapi

./: .env.example  .env.test  .flake8  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.github/: pull_request_template.md
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 2b65d99108d5_seed_data.py  602af0699ee9_init_persons_and_country_db.py
app/: config.py  main.py
app/controllers/: continent.py  country.py  person.py
app/data/: README.md
app/libs/: db.py
app/models/: continent.py  country.py  person.py
app/repositories/: continent.py  country.py  person.py
app/schemas/: country.py  person.py
http/: api.http  http-client.env.json
pyfastapi/: __init__.py  config.py  main.py
pyfastapi/controllers/: __init__.py  continent.py  country.py  person.py
pyfastapi/libs/: __init__.py  db.py  exceptions.py
pyfastapi/models/: __init__.py  continent.py  country.py  person.py
pyfastapi/repositories/: __init__.py  base.py  continent.py  country.py  person.py
pyfastapi/schemas/: __init__.py  base.py  continent.py  country.py  person.py
pyfastapi/services/: continent.py  country.py  person.py
pyfastapi/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_main.py
tests/api_tests/: test_continents.py  test_countries.py  test_e2e.py  test_persons.py  util_pagination_helper.py
tests/unit_tests/repositories/: test_base.py
tests/unit_tests/services/: test_continent_service.py  test_country_service.py  test_person_service.py
