[project]
name = "pyfastapi"
version = "0.1.0"
description = ""
authors = [{ name = "Heinrich Chan", email = "guiltyrage10@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "fastapi[all]>=0.109.0,<0.110",
    "fastapi-pagination>=0.12.14,<0.13",
    "sqlalchemy>=2.0.25,<3",
    "alembic>=1.13.1,<2",
    "toolz>=0.12.1,<0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "flake8>=7.0.0,<8",
    "faker>=22.6.0,<23",
    "coverage>=7.4.1,<8",
    "mypy>=1.8.0,<2",
    "flake8-quotes>=3.4.0,<4",
    "poethepoet>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    ".pytest_cache/",
    ".mypy_cache/",
    "htmlcov/",
]

[tool.poe.tasks.coverage]
shell = "coverage run -m pytest && coverage report && coverage xml -o coverage.xml"

[tool.poe.tasks.flake8]
shell = "flake8 ."

[tool.poe.tasks.mypy]
shell = "mypy --strict ."

[tool.poe.tasks.lint]
sequence = ["flake8", "mypy"]
